2004-11-19  Derek Price  <derek@ximbiot.com>

	* subr.c (Xasnprintf): Improve header comment block.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* root.c (normalize_cvsroot): Improve header comment block.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* server.c: Misc reformatting and comment corrections.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* cvs.h (hostname): Redeclare as pointer rather than array.
	* main.c: Include xgethostname.h.  Declare server_hostname.
	(main): Use xgethostname().  Set server_hostname.
	* server.c (MAXHOSTNAMELEN): Remove this macro.
	(isThisHost): Reference global HOSTNAME rather than looking it up.
	Improve header comment block.
	(gserver_authenticate_connection): Likewise.
	(serve_command_prep): Correct comment.
	(serve_hostname): Don't bother to validate hostname length.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* server.c (isThisHost): strcasecmp before consulting the DNS as an
	optimization.

2004-11-18  Mark D. Baushke  <mdb@cvshome.org>

	* checkout.c (checkout_proc): Passing the repository to
	tag_check_valid seems to stop the assertion failure in recurse.c
	do_recursion.
	* sanity.sh (basic2-21a): Removed.
	(basic2-21c): Fixed.

2004-11-18  Derek Price  <derek@ximbiot.com>

	* sanity.sh (skip_always, notproxy): New functions.
	(skip, remoteonly, sshstdio, client): Use new functions.

2004-11-17  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (basic2-21a): The val-tags file should have
	at least 'rtagged-by-head y' in it. Test from cvs 1.11.18 that
	shows fixed result.
	(basic2-21b, basic2-21c): New tests showing a cvs bug when
	val-tags is not present.
	(Report from "John Elgin" <John@JCElgin.com>.)

	* sanity.sh (basicb-21): POSIX 1003.2 specifies 'illegal option'
	while lots of getopt implementations still use 'invalid option'.
	Allow either form for this test.

2004-11-17  Mark D. Baushke  <mdb@cvshome.org>

	* buffer.c (fd_buffer_block): Deal with BSD and BSDI problems to